@@ -1,3 +1,10 @@
+
+    - Bug fix: was a fatal error when a value was submitted for Label element
+      (code called delete_nested_hash_value instead of deleted_nested_hash_key).
+    
+    - Now only delete submitted value if there's no other field on the form with
+      the same name.
+
 0.08002 2010-09-22
 
     - Incompatible Change: removed all previously deprecated methods.
